# Cambodia-Job-Market-Analysis

./: .env.example  .gitignore  Dashboard.pbix  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
data/cleaned/: job_skills.csv
data/powerbi/: category_summary.csv  company_hiring_summary.csv  job_skills.csv  location_summary.csv  salary_summary.csv  skill_demand_summary.csv  skills.csv  source_summary.csv
database/: README.md  check_counts.sql  load_postgres.py  schema.sql  seed.sql
exports/: export_powerbi.py
notebooks/: exploratory_analysis.ipynb
powerbi/: dax_measures.md  dax_measures_postgresql.md  dax_measures_powerbi_views.md  model_setup.md  postgresql_power_query.pq  power_query_queries.pq
processing/: clean_jobs.py  extract_skills.py
reports/: project_summary.md
scraper/: scrape_jobs.py
