[project]
name = "job-market-analysis"
version = "0.1.0"
description = "Local-first pipeline for analyzing general job market demand in Cambodia."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "SQLAlchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
]

[tool.uv]
package = false
